Download results as .csv file
Added ability to download results as .csv file. Some of the code that enables this is from Stack Overflow under the CC BY-SA 3.0 license, which is now noted in LICENSE.txt, README.md, and the top comment in high_voltage_divider.html

Also fixed an input checking bug: The check on the minimum string resistance limited that value to the largest resistor in the chosen series. It is now three times as large.

--- a/high_voltage_divider.html
+++ b/high_voltage_divider.html
@@ -9,6 +9,16 @@ resistors nearest a target ratio using real-world resistor values.
 Written in 2018 by Ben Tesch
 Distributed at https://github.com/slugrustle/high_voltage_divider
 
+high_voltage_divider.html contains the function download_csv(),
+which comes from a Stack Overflow post
+https://stackoverflow.com/a/33542499
+by user Ludovic Feltz (on 2015-11-5), edited by user Smi (on 2016-08-12).
+I retrieved this code on 2018-03-31 and changed it slightly.
+Stack Overflow code is distributed under the CC BY-SA 3.0 license:
+https://creativecommons.org/licenses/by-sa/3.0/
+The remainder of high_voltage_divider.html is under the CC0 1.0 Universal
+Public Domain Dedication, which is reproduced below.
+
 To the extent possible under law, the author has dedicated all copyright
 and related and neighboring rights to this software to the public domain
 worldwide. This software is distributed without any warranty.
@@ -139,6 +149,17 @@ express Statement of Purpose.
 -->
 <title>High Voltage Divider Calculator</title>
 <style>
+div.titleDiv {
+  margin-left: 4pt;
+  margin-top: 14pt;
+  margin-bottom: 10pt;
+}
+
+span.titleSpan {
+  font-weight: bold;
+  font-size: 16pt;
+}
+
 #inputTable {
   border: 1px solid black;
 }
@@ -205,7 +226,7 @@ td.paramLabel {
 </head>
 
 <body>
-<h3>High Voltage Divider Calculator&#x2001;v1.2&#x2001;2018-03-28</h3>
+<div class="titleDiv"><span class="titleSpan">High Voltage Divider Calculator&#x2001;v1.3&#x2001;2018-04-01</span></div>
 <div style="display: inline-block;">
   <table id="inputTable">
     <tr>
@@ -250,7 +271,7 @@ td.paramLabel {
     </tr>
   </table>
 
-  <h3>Equations</h3>
+  <div class="titleDiv"><span class="titleSpan">Equations</span></div>
   <div id="explainerDiv" style="border: 1px solid black; display: inline-block;">
     <div style="float: left; margin-right: 8pt;">
       <!-- Begin High Voltage Divider SVG Image -->
@@ -304,7 +325,7 @@ td.paramLabel {
     </div>
   </div>
 
-  <h3>Results</h3>
+  <div class="titleDiv"><span class="titleSpan">Results</span><span id="downloadSpan"></span></div>
   <table id="resultsTable">
     <tr>
       <td>&nbsp;</td>
@@ -518,6 +539,11 @@ function findNearest(resVal) {
 
 // Display E24 series resistor values
 function ShowE24() {
+  // remove spreadsheet download link from previous results
+  var downloadSpan = document.getElementById("downloadSpan");
+  downloadSpan.innerHTML = "";
+  csvString = "";
+
   var tableFragment = document.createDocumentFragment();
   var jMult;
   var multiplier;
@@ -564,6 +590,11 @@ function ShowE24() {
 
 // Display E96 series resistor values
 function ShowE96() {
+  // remove spreadsheet download link from previous results
+  var downloadSpan = document.getElementById("downloadSpan");
+  downloadSpan.innerHTML = "";
+  csvString = "";
+
   var tableFragment = document.createDocumentFragment();
   var jMult;
   var multiplier;
@@ -1086,7 +1117,7 @@ function displayDiagnostics(settings) {
   var ratioRangeLabel_td = document.createElement("td");
   ratioRangeLabel_td.className = "paramLabel";
   ratioRangeLabel_td.textContent = "Ratio search range";
-  var ratioRangeValue_td = document.createElement("td");;
+  var ratioRangeValue_td = document.createElement("td");
   ratioRangeValue_td.textContent = "[\u00A0" + settings.ratioThresholdLow.toPrecision(6) + ",\u2000" + settings.ratioThresholdHigh.toPrecision(6) + "\u00A0]";
 
   ratioRange_tr.appendChild(ratioRangeLabel_td);
@@ -1166,6 +1197,35 @@ function displayDiagnostics(settings) {
   return;
 }
 
+// Holds text of .csv file of results
+var csvString = "";
+
+// The function download_csv() comes from a Stack Overflow post
+// https://stackoverflow.com/a/33542499
+// by user Ludovic Feltz (on 2015-11-5), edited by user Smi (on 2016-08-12).
+// Retrieved 2018-03-31 and changed slightly to fit this program.
+// Stack Overflow code is distributed under the CC BY-SA 3.0 license
+// https://creativecommons.org/licenses/by-sa/3.0/
+function download_csv() {
+  var csvBlob = new Blob([csvString], {type: 'text/csv'});
+  // Filename hard-coded for now. Base on settings or date?
+  var filename = "results.csv";
+
+  if (window.navigator.msSaveOrOpenBlob) {
+    // Internet Explorer
+    window.navigator.msSaveBlob(csvBlob, filename);
+  } else {
+    var csvAnchor = document.createElement("a");
+    var blobURL = URL.createObjectURL(csvBlob);
+    csvAnchor.href = blobURL;
+    csvAnchor.download = filename;
+    document.body.appendChild(csvAnchor);
+    csvAnchor.click();
+    document.body.removeChild(csvAnchor);
+    URL.revokeObjectURL(blobURL);
+  }
+}
+
 // Takes the fully-populated candidates array, sorts by lowest
 // difference from the target ratio, collects best matches into
 // groups, and displays them.
@@ -1191,15 +1251,62 @@ function sortAndDisplayResults(settings) {
   maxRatio_th.textContent = "Max\u00A0Ratio";
   var diffRatio_th = document.createElement("th");
 
+  // First two csv rows store the settings
+  csvString = "Target Ratio,Target Type,Res Tolerance,Min Upper Res,Min String Res,Max String Res,Res Series,Date,Time\n";
+  csvString += settings.targetRatio.toPrecision(17) + ",";
+
+  switch (settings.ratioType) {
+  case ratioEnum.MIN:
+    csvString += "Min Ratio,";
+    break;
+  case ratioEnum.MAX:
+    csvString += "Max Ratio,";
+    break;
+  default:
+    csvString += "Nom Ratio,";
+    break;
+  }
+
+  csvString += settings.resTolerance.toString() + "%,";
+  csvString += settings.minUpperRes.toPrecision(9) + ",";
+  csvString += settings.minStringRes.toPrecision(9) + ",";
+  csvString += settings.maxStringRes.toPrecision(9) + ",";
+
+  switch (settings.resSeries) {
+  case seriesEnum.E24:
+    csvString += "E24,";
+    break;
+  case seriesEnum.E96:
+    csvString += "E96,";
+    break;
+  default:
+    csvString += "E24 and E96,";
+    break;
+  }
+
+  var thisMoment = new Date();
+  csvString += thisMoment.getFullYear() + "-" + (thisMoment.getMonth() + 1).toString() + "-" + thisMoment.getDate() + ",";
+  csvString += thisMoment.getHours() + ":" + thisMoment.getMinutes() + ":" + thisMoment.getSeconds() + "\n";
+
+  // The third csv row is blank to put space between
+  // settings and results.
+  csvString += ",,,,,,,,\n";
+
+  // Fourth csv row is header for results
+  csvString += "Group,Upper1,Upper2,Lower,String,Min Ratio,Nom Ratio,Max Ratio,";
+
   switch (settings.ratioType) {
   case ratioEnum.MIN:
     diffRatio_th.textContent = "Min\u00A0Ratio\u00A0\u2212\u00A0Target";
+    csvString += "Min Ratio - Target";
     break;
   case ratioEnum.MAX:
     diffRatio_th.textContent = "Max\u00A0Ratio\u00A0\u2212\u00A0Target";
+    csvString += "Max Ratio - Target";
     break;
   default:
     diffRatio_th.textContent = "Nom\u00A0Ratio\u00A0\u2212\u00A0Target";
+    csvString += "Nom Ratio - Target";
     break;
   }
 
@@ -1359,6 +1466,15 @@ function sortAndDisplayResults(settings) {
       result_tr.appendChild(resultMaxRatio_td);
       result_tr.appendChild(resultDiff_td);
       tableFragment.appendChild(result_tr);
+
+      // Line break for header row or previous result row.
+      // Final result row has no line break.
+      csvString += "\n";
+      csvString += groupNumber.toString() + "," + thisResult.resUpper1.toPrecision(7) + ",";
+      csvString += thisResult.resUpper2.toPrecision(7) + ",";
+      csvString += thisResult.resLower.toPrecision(7) + "," + stringRes.toPrecision(9) + ",";
+      csvString += minRatio.toPrecision(17) + "," + nomRatio.toPrecision(17) + ",";
+      csvString += maxRatio.toPrecision(17) + "," + thisResult.diff.toExponential(17);
     }
 
     resultsGroup = [];
@@ -1370,6 +1486,17 @@ function sortAndDisplayResults(settings) {
   var resultsTable = document.getElementById("resultsTable");
   resultsTable.innerHTML = "";
   resultsTable.appendChild(tableFragment);
+
+  var downloadSpan = document.getElementById("downloadSpan");
+  downloadSpan.style.paddingLeft = "1.2em";
+  downloadSpan.style.fontSize = "14pt";
+  var dl_link = document.createElement("a");
+  dl_link.href = "javascript:;";
+  dl_link.addEventListener('click', function () { download_csv(); }, false);
+  dl_link.textContent = "Download .csv";
+  downloadSpan.textContent = "(\u2009";
+  downloadSpan.appendChild(dl_link);
+  downloadSpan.insertAdjacentText('beforeend', '\u2009)');
   return;
 }
 
@@ -1455,6 +1582,17 @@ function parseTolerance(inString) {
 // meeting user's divider specification, and outputs results
 // or error messages.
 function solveDivider() {
+  // remove spreadsheet download link from previous results
+  var downloadSpan = document.getElementById("downloadSpan");
+  downloadSpan.innerHTML = "";
+  csvString = "";
+
+  // These are used for error messages
+  var error_tr;
+  var error_td;
+  var error_span;
+  var resultsTable;
+
   // Store all user settings in inputSettings
   var inputSettings = new Settings();
   // Reuse parserOutput for return value from parser functions
@@ -1481,9 +1619,9 @@ function solveDivider() {
     inputSettings.ratioThresholdLow = Math.max(1.0e-9, inputSettings.targetRatio-0.005);
     inputSettings.ratioThresholdHigh = Math.min(inputSettings.targetRatio+0.005, 1.0 - 1.0e-9);
   } else {
-    var error_tr = document.createElement("tr");
-    var error_td = document.createElement("td");
-    var error_span = document.createElement("span");
+    error_tr = document.createElement("tr");
+    error_td = document.createElement("td");
+    error_span = document.createElement("span");
     error_span.style.fontWeight = "bold";
     error_span.textContent = "Input Error:\u2000";
     
@@ -1491,7 +1629,7 @@ function solveDivider() {
     error_td.insertAdjacentText('beforeend', 'Target Divider Ratio must be a number on the range (0.0, 1.0).');
     error_tr.appendChild(error_td);
 
-    var resultsTable = document.getElementById("resultsTable");
+    resultsTable = document.getElementById("resultsTable");
     resultsTable.innerHTML = "";
     resultsTable.appendChild(error_tr);
     return;
@@ -1511,16 +1649,16 @@ function solveDivider() {
   if (parserOutput.isValid === true) {
     inputSettings.resTolerance = parserOutput.value;
   } else {
-    var error_tr = document.createElement("tr");
-    var error_td = document.createElement("td");
-    var error_span = document.createElement("span");
+    error_tr = document.createElement("tr");
+    error_td = document.createElement("td");
+    error_span = document.createElement("span");
     error_span.style.fontWeight = "bold";
     error_span.textContent = "Input Error:\u2000";
     error_td.appendChild(error_span);
     error_td.insertAdjacentText('beforeend', 'Resistor tolerance must be a number on the range [0.0, 100.0).');
     error_tr.appendChild(error_td);
 
-    var resultsTable = document.getElementById("resultsTable");
+    resultsTable = document.getElementById("resultsTable");
     resultsTable.innerHTML = "";
     resultsTable.appendChild(error_tr);
     return;
@@ -1531,10 +1669,10 @@ function solveDivider() {
   if (parserOutput.isValid === true) {
     inputSettings.minUpperRes = parserOutput.value;
   } else {
-    var error_tr = document.createElement("tr");
-    var error_td = document.createElement("td");
+    error_tr = document.createElement("tr");
+    error_td = document.createElement("td");
     error_td.style.lineHeight = "1.5";
-    var error_span = document.createElement("span");
+    error_span = document.createElement("span");
     error_span.style.fontWeight = "bold";
     error_span.textContent = "Input Error:\u2000";
     error_td.appendChild(error_span);
@@ -1543,17 +1681,17 @@ function solveDivider() {
     error_td.insertAdjacentHTML('beforeend', 'M (mega = 10<sup>6</sup>) are recognized.');
     error_tr.appendChild(error_td);
 
-    var resultsTable = document.getElementById("resultsTable");
+    resultsTable = document.getElementById("resultsTable");
     resultsTable.innerHTML = "";
     resultsTable.appendChild(error_tr);
     return;
   }
 
   if (inputSettings.minUpperRes > resArray[resArray.length-1]) {
-    var error_tr = document.createElement("tr");
-    var error_td = document.createElement("td");
+    error_tr = document.createElement("tr");
+    error_td = document.createElement("td");
     error_td.style.lineHeight = "1.5";
-    var error_span = document.createElement("span");
+    error_span = document.createElement("span");
     error_span.style.fontWeight = "bold";
     error_span.textContent = "Input Error:\u2000";
     error_td.appendChild(error_span);
@@ -1562,7 +1700,7 @@ function solveDivider() {
     error_td.insertAdjacentText('beforeend', 'program is ' + resValToString(resArray[resArray.length-1], 3) + '.');
     error_tr.appendChild(error_td);
 
-    var resultsTable = document.getElementById("resultsTable");
+    resultsTable = document.getElementById("resultsTable");
     resultsTable.innerHTML = "";
     resultsTable.appendChild(error_tr);
     return;
@@ -1573,10 +1711,10 @@ function solveDivider() {
   if (parserOutput.isValid === true) {
     inputSettings.minStringRes = parserOutput.value;
   } else {
-    var error_tr = document.createElement("tr");
-    var error_td = document.createElement("td");
+    error_tr = document.createElement("tr");
+    error_td = document.createElement("td");
     error_td.style.lineHeight = "1.5";
-    var error_span = document.createElement("span");
+    error_span = document.createElement("span");
     error_span.style.fontWeight = "bold";
     error_span.textContent = "Input Error:\u2000";
     error_td.appendChild(error_span);
@@ -1585,17 +1723,17 @@ function solveDivider() {
     error_td.insertAdjacentHTML('beforeend', 'M (mega = 10<sup>6</sup>) are recognized.');
     error_tr.appendChild(error_td);
 
-    var resultsTable = document.getElementById("resultsTable");
+    resultsTable = document.getElementById("resultsTable");
     resultsTable.innerHTML = "";
     resultsTable.appendChild(error_tr);
     return;
   }
 
-  if (inputSettings.minStringRes > resArray[resArray.length-1]) {
-    var error_tr = document.createElement("tr");
-    var error_td = document.createElement("td");
+  if (inputSettings.minStringRes > 3.0 * resArray[resArray.length-1]) {
+    error_tr = document.createElement("tr");
+    error_td = document.createElement("td");
     error_td.style.lineHeight = "1.5";
-    var error_span = document.createElement("span");
+    error_span = document.createElement("span");
     error_span.style.fontWeight = "bold";
     error_span.textContent = "Input Error:\u2000";
     error_td.appendChild(error_span);
@@ -1604,7 +1742,7 @@ function solveDivider() {
     error_td.insertAdjacentText('beforeend', 'program is ' + resValToString(resArray[resArray.length-1], 3) + '.');
     error_tr.appendChild(error_td);
 
-    var resultsTable = document.getElementById("resultsTable");
+    resultsTable = document.getElementById("resultsTable");
     resultsTable.innerHTML = "";
     resultsTable.appendChild(error_tr);
     return;
@@ -1615,10 +1753,10 @@ function solveDivider() {
   if (parserOutput.isValid === true) {
     inputSettings.maxStringRes = parserOutput.value;
   } else {
-    var error_tr = document.createElement("tr");
-    var error_td = document.createElement("td");
+    error_tr = document.createElement("tr");
+    error_td = document.createElement("td");
     error_td.style.lineHeight = "1.5";
-    var error_span = document.createElement("span");
+    error_span = document.createElement("span");
     error_span.style.fontWeight = "bold";
     error_span.textContent = "Input Error:\u2000";
     error_td.appendChild(error_span);
@@ -1627,17 +1765,17 @@ function solveDivider() {
     error_td.insertAdjacentHTML('beforeend', 'M (mega = 10<sup>6</sup>) are recognized.');
     error_tr.appendChild(error_td);
 
-    var resultsTable = document.getElementById("resultsTable");
+    resultsTable = document.getElementById("resultsTable");
     resultsTable.innerHTML = "";
     resultsTable.appendChild(error_tr);
     return;
   }
 
   if (inputSettings.maxStringRes < resArray[0]) {
-    var error_tr = document.createElement("tr");
-    var error_td = document.createElement("td");
+    error_tr = document.createElement("tr");
+    error_td = document.createElement("td");
     error_td.style.lineHeight = "1.5";
-    var error_span = document.createElement("span");
+    error_span = document.createElement("span");
     error_span.style.fontWeight = "bold";
     error_span.textContent = "Input Error:\u2000";
     error_td.appendChild(error_span);
@@ -1646,39 +1784,39 @@ function solveDivider() {
     error_td.insertAdjacentText('beforeend', 'program is ' + resValToString(resArray[0], 3) + '.');
     error_tr.appendChild(error_td);
 
-    var resultsTable = document.getElementById("resultsTable");
+    resultsTable = document.getElementById("resultsTable");
     resultsTable.innerHTML = "";
     resultsTable.appendChild(error_tr);
     return;
   }
 
   if (inputSettings.maxStringRes <= inputSettings.minStringRes) {
-    var error_tr = document.createElement("tr");
-    var error_td = document.createElement("td");
-    var error_span = document.createElement("span");
+    error_tr = document.createElement("tr");
+    error_td = document.createElement("td");
+    error_span = document.createElement("span");
     error_span.style.fontWeight = "bold";
     error_span.textContent = "Input Error:\u2000";
     error_td.appendChild(error_span);
     error_td.insertAdjacentText('beforeend', 'Max String Resistance must be larger than Min String Resistance.');
     error_tr.appendChild(error_td);
 
-    var resultsTable = document.getElementById("resultsTable");
+    resultsTable = document.getElementById("resultsTable");
     resultsTable.innerHTML = "";
     resultsTable.appendChild(error_tr);
     return;
   }
 
   if (inputSettings.maxStringRes <= 2.0 * inputSettings.minUpperRes) {
-    var error_tr = document.createElement("tr");
-    var error_td = document.createElement("td");
-    var error_span = document.createElement("span");
+    error_tr = document.createElement("tr");
+    error_td = document.createElement("td");
+    error_span = document.createElement("span");
     error_span.style.fontWeight = "bold";
     error_span.textContent = "Input Error:\u2000";
     error_td.appendChild(error_span);
     error_td.insertAdjacentText('beforeend', 'Max String Resistance must be larger than 2 \u2022 Min Upper1,2 Resistance.');
     error_tr.appendChild(error_td);
 
-    var resultsTable = document.getElementById("resultsTable");
+    resultsTable = document.getElementById("resultsTable");
     resultsTable.innerHTML = "";
     resultsTable.appendChild(error_tr);
     return;
