input check bug fix
The smallest allow Max String Resistance input is now three times the lowest value in the chosen resistor series---the actual minimum possible string resistance. It was previously just the lowest value in the chosen resistor series.

--- a/high_voltage_divider.html
+++ b/high_voltage_divider.html
@@ -1771,7 +1771,7 @@ function solveDivider() {
     return;
   }
 
-  if (inputSettings.maxStringRes < resArray[0]) {
+  if (inputSettings.maxStringRes < 3.0 * resArray[0]) {
     error_tr = document.createElement("tr");
     error_td = document.createElement("td");
     error_td.style.lineHeight = "1.5";
