--- a/high_voltage_divider.html
+++ b/high_voltage_divider.html
@@ -162,6 +162,7 @@ span.titleSpan {
 
 #inputTable {
   border: 1px solid black;
+  font-size: 12pt;
 }
 
 #inputTable th, #inputTable td {
@@ -177,12 +178,10 @@ td.buttonCol {
   text-align: center;
 }
 
-#inputTable, #explainerDiv, #resultsTable {
-  width: 100%;
-}
-
-#resultsTable {
-  margin-bottom: 30pt;
+#explainerDiv {
+  border: 1px solid black; 
+  display: inline-block; 
+  padding: 8pt;
 }
 
 #resultsTable, #resultsTable th, #resultsTable td {
@@ -227,113 +226,111 @@ td.paramLabel {
 
 <body>
 <div class="titleDiv"><span class="titleSpan">High Voltage Divider Calculator&#x2001;v1.5&#x2001;2018-04-10</span></div>
-<div style="display: inline-block;" id="alignDiv">
-  <table id="inputTable">
-    <tr>
-      <td class="labelCol">Target Divider Ratio</td>
-      <td class="buttonCol"><input id="dividerRatio" maxlength="200"/></td>
-      <td>Min <input type="radio" name="ratioType" id="ratioTypeMin"/>
-          Nom <input type="radio" name="ratioType" id="ratioTypeNom" checked/>
-          Max <input type="radio" name="ratioType" id="ratioTypeMax"/></td>
-    </tr>
-    <tr>
-      <td class="labelCol">Resistor Tolerance (%)</td>
-      <td class="buttonCol"><input id="resTolerance" value="0" maxlength="30"/></td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td class="labelCol">Min Upper1,2 Resistance (&#x03A9;)</td>
-      <td class="buttonCol"><input id="minUpperResistance" value="0" maxlength="30"/></td>
-      <td>Resistance value examples:</td>
-    </tr>
-    <tr>
-      <td class="labelCol">Min String Resistance (&#x03A9;)</td>
-      <td class="buttonCol"><input id="minStringResistance" value="0" maxlength="30"/></td>
-      <td>0,&#x2000;10,&#x2000;2.4k,&#x2000;5.6e4,&#x2000;3.1M</td>
-    </tr>
-    <tr>
-      <td class="labelCol">Max String Resistance (&#x03A9;)</td>
-      <td class="buttonCol"><input id="maxStringResistance" value="30M" maxlength="30"/></td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td class="labelCol">Resistor Value Series</td>
-      <td class="buttonCol">
-          E24 <input type="radio" name="resSeries" id="resSeriesE24" value="min"/>
-          E96 <input type="radio" name="resSeries" id="resSeriesE96" value="nom"/>
-          Both <input type="radio" name="resSeries" id="resSeriesE24E96" checked/>
-      </td>
-      <td><a href="javascript:;" onclick="ShowE24();">Show E24</a>&#x2000;
-          <a href="javascript:;" onclick="ShowE96();">Show E96</a></td>
-    </tr>
-    <tr>
-      <td colspan="3" class="buttonCol"><button onclick="solveDivider();">Solve</button></td>
-    </tr>
-  </table>
+<table id="inputTable">
+  <tr>
+    <td class="labelCol">Target Divider Ratio</td>
+    <td class="buttonCol"><input id="dividerRatio" maxlength="200"/></td>
+    <td>Min <input type="radio" name="ratioType" id="ratioTypeMin"/>
+        Nom <input type="radio" name="ratioType" id="ratioTypeNom" checked/>
+        Max <input type="radio" name="ratioType" id="ratioTypeMax"/></td>
+  </tr>
+  <tr>
+    <td class="labelCol">Resistor Tolerance (%)</td>
+    <td class="buttonCol"><input id="resTolerance" value="0" maxlength="30"/></td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td class="labelCol">Min Upper1,2 Resistance (&#x03A9;)</td>
+    <td class="buttonCol"><input id="minUpperResistance" value="0" maxlength="30"/></td>
+    <td>Resistance value examples:</td>
+  </tr>
+  <tr>
+    <td class="labelCol">Min String Resistance (&#x03A9;)</td>
+    <td class="buttonCol"><input id="minStringResistance" value="0" maxlength="30"/></td>
+    <td>0,&#x2000;10,&#x2000;2.4k,&#x2000;5.6e4,&#x2000;3.1M</td>
+  </tr>
+  <tr>
+    <td class="labelCol">Max String Resistance (&#x03A9;)</td>
+    <td class="buttonCol"><input id="maxStringResistance" value="30M" maxlength="30"/></td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td class="labelCol">Resistor Value Series</td>
+    <td class="buttonCol">
+        E24 <input type="radio" name="resSeries" id="resSeriesE24" value="min"/>
+        E96 <input type="radio" name="resSeries" id="resSeriesE96" value="nom"/>
+        Both <input type="radio" name="resSeries" id="resSeriesE24E96" checked/>
+    </td>
+    <td><a href="javascript:;" onclick="ShowE24();">Show E24</a>&#x2000;
+        <a href="javascript:;" onclick="ShowE96();">Show E96</a></td>
+  </tr>
+  <tr>
+    <td colspan="3" class="buttonCol"><button onclick="solveDivider();">Solve</button></td>
+  </tr>
+</table>
 
-  <div class="titleDiv"><span class="titleSpan">Equations</span></div>
-  <div id="explainerDiv" style="border: 1px solid black; display: inline-block;">
-    <div style="float: left; margin-right: 8pt;">
-      <!-- Begin High Voltage Divider SVG Image -->
-      <svg width="170.89pt" height="255.53pt" version="1.1" viewBox="0 0 341.78538 511.05427" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" role="img" aria-label="High Voltage Divider Circuit Diagram">
-      <title>High Voltage Divider Circuit Diagram</title>
-      <desc>Three resistor voltage divider. Upper two series resistors connect to input and output; lower resistor connects to output and ground.</desc>
-      <g transform="translate(-154.43 -83.466)">
-      <g transform="translate(59.372 125.46)">
-      <circle cx="185.09" cy="23.362" r="5" fill="none" stroke="#000" stroke-width="1px"/>
-      <text x="112.10548" y="222.3307" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="112.10548" y="222.3307" font-size="37.333px">Upper2</tspan></text>
-      <text x="133.39714" y="353.69226" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="133.39714" y="353.69226" font-size="37.333px">Lower</tspan></text>
-      <path d="m280 276.1h74.875" fill="none" stroke="#000" stroke-width=".8653px"/>
-      <circle cx="360.11" cy="276.1" r="5" fill="none" stroke="#000" stroke-width="1px"/>
-      <circle cx="280" cy="276.39" r="2" stroke="#000"/>
-      <text x="165.63867" y="6.3668594" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="165.63867" y="6.3668594" font-size="37.333px">Vi</tspan></text>
-      <text x="373.44031" y="289.44717" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="373.44031" y="289.44717" font-size="37.333px">Vo</tspan></text>
-      <text x="111.8138" y="110.81879" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="111.8138" y="110.81879" font-size="37.333px">Upper1</tspan></text>
-      <g transform="translate(.00229 1.213)">
-      <path d="m280 427.34v-14.98m-20.004 14.98h39.996m-23.994 20.006h8m-16-10h24m-12.004-153.21v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25m6e-3 18.222-6e-3 -18.222m-3.2e-4 -127.99v18m2.3e-4 -128v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25m0-111.27v1.2658m0-111.27v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25m0-110 1e-3 -22.73h-89.842" fill="none" stroke="#000"/>
-      </g></g></g></svg>
-      <!-- End High Voltage Divider SVG Image -->
+<div class="titleDiv"><span class="titleSpan">Equations</span></div>
+<div id="explainerDiv">
+  <div style="float: left; margin-right: 10pt;">
+    <!-- Begin High Voltage Divider SVG Image -->
+    <svg width="150.89pt" height="235.53pt" version="1.1" viewBox="0 0 301.78535 471.05424" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" role="img" aria-label="High Voltage Divider Circuit Diagram">
+    <title>High Voltage Divider Circuit Diagram</title>
+    <desc>Three resistor voltage divider. Upper two series resistors connect to input and output; lower resistor connects to output and ground.</desc>
+    <g transform="translate(-174.43 -103.47)">
+    <g transform="translate(59.372 125.46)">
+    <circle cx="185.09" cy="23.362" r="5" fill="none" stroke="#000" stroke-width="1px"/>
+    <text x="112.10548" y="222.3307" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="112.10548" y="222.3307" font-size="37.333px">Upper2</tspan></text>
+    <text x="133.39714" y="353.69226" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="133.39714" y="353.69226" font-size="37.333px">Lower</tspan></text>
+    <path d="m280 276.1h74.875" fill="none" stroke="#000" stroke-width=".8653px"/>
+    <circle cx="360.11" cy="276.1" r="5" fill="none" stroke="#000" stroke-width="1px"/>
+    <circle cx="280" cy="276.39" r="2" stroke="#000"/>
+    <text x="165.63867" y="6.3668594" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="165.63867" y="6.3668594" font-size="37.333px">Vi</tspan></text>
+    <text x="373.44031" y="289.44717" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" stroke-width="1px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="373.44031" y="289.44717" font-size="37.333px">Vo</tspan></text>
+    <text x="111.8138" y="110.81879" fill="#000000" font-family="sans-serif" font-size="37.333px" letter-spacing="0px" word-spacing="0px" style="line-height:125%" xml:space="preserve"><tspan x="111.8138" y="110.81879" font-size="37.333px">Upper1</tspan></text>
+    <g transform="translate(.00229 1.213)">
+    <path d="m280 427.34v-14.98m-20.004 14.98h39.996m-23.994 20.006h8m-16-10h24m-12.004-153.21v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25m6e-3 18.222-6e-3 -18.222m-3.2e-4 -127.99v18m2.3e-4 -128v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25m0-111.27v1.2658m0-111.27v25l15 5-30 10 30 10-30 10 30 10-30 10 15 5v25m0-110 1e-3 -22.73h-89.842" fill="none" stroke="#000"/>
+    </g></g></g></svg>
+    <!-- End High Voltage Divider SVG Image -->
+  </div>
+  <div style="display: inline-block; font-size: 12pt;">
+    <div style="margin-bottom: 14pt;">
+      <b>String Resistance</b>&#x2000;=&#x2000;Lower + Upper1 + Upper2
     </div>
-    <div style="display: inline-block;">
-      <div style="padding-left: 4pt; padding-right: 6pt; margin-top: 10pt; margin-bottom: 14pt;">
-        <b>String Resistance</b>&#x2000;=&#x2000;Lower + Upper1 + Upper2
-      </div>
-      <div style="padding-left: 4pt; padding-right: 6pt; margin-bottom: 14pt;">
-        <b>Divider Ratio</b>&#x2000;=&#x2000;Vo <b>/</b> Vi
-      </div>
-      <div style="padding-left: 4pt; padding-right: 6pt; margin-bottom: 4pt;">
-        <b>Min Ratio</b>&#x2000;=&#x2000;LowerDim <b>/</b> (LowerDim + UpperAug)
-      </div>
-      <div style="padding-left: 4pt; padding-right: 6pt; margin-bottom: 4pt;">
-        <i>LowerDim</i>&#x2000;=&#x2000;(1 &#x2212; Tolerance<b>/</b>100) &#x2022; Lower
-      </div>
-      <div style="padding-left: 4pt; padding-right: 6pt; margin-bottom: 14pt;">
-        <i>UpperAug</i>&#x2000;=&#x2000;(1 + Tolerance<b>/</b>100) &#x2022; (Upper1 + Upper2)
-      </div>
-      <div style="padding-left: 4pt; padding-right: 6pt; margin-bottom: 14pt;">
-        <b>Nom Ratio</b>&#x2000;=&#x2000;Lower <b>/</b> (Lower + Upper1 + Upper2)
-      </div>
-      <div style="padding-left: 4pt; padding-right: 6pt; margin-bottom: 4pt;">
-        <b>Max Ratio</b>&#x2000;=&#x2000;LowerAug <b>/</b> (LowerAug + UpperDim)
-      </div>
-      <div style="padding-left: 4pt; padding-right: 6pt; margin-bottom: 4pt;">
-        <i>LowerAug</i>&#x2000;=&#x2000;(1 + Tolerance<b>/</b>100) &#x2022; Lower
-      </div>
-      <div style="padding-left: 4pt; padding-right: 6pt;">
-        <i>UpperDim</i>&#x2000;=&#x2000;(1 &#x2212; Tolerance<b>/</b>100) &#x2022; (Upper1 + Upper2)<br/>
-      </div>
+    <div style="margin-bottom: 14pt;">
+      <b>Divider Ratio</b>&#x2000;=&#x2000;Vo <b>/</b> Vi
+    </div>
+    <div style="margin-bottom: 4pt;">
+      <b>Min Ratio</b>&#x2000;=&#x2000;LowerDim <b>/</b> (LowerDim + UpperAug)
+    </div>
+    <div style="margin-bottom: 4pt;">
+      <i>LowerDim</i>&#x2000;=&#x2000;(1 &#x2212; Tolerance<b>/</b>100) &#x2022; Lower
+    </div>
+    <div style="margin-bottom: 14pt;">
+      <i>UpperAug</i>&#x2000;=&#x2000;(1 + Tolerance<b>/</b>100) &#x2022; (Upper1 + Upper2)
+    </div>
+    <div style="margin-bottom: 14pt;">
+      <b>Nom Ratio</b>&#x2000;=&#x2000;Lower <b>/</b> (Lower + Upper1 + Upper2)
+    </div>
+    <div style="margin-bottom: 4pt;">
+      <b>Max Ratio</b>&#x2000;=&#x2000;LowerAug <b>/</b> (LowerAug + UpperDim)
+    </div>
+    <div style="margin-bottom: 4pt;">
+      <i>LowerAug</i>&#x2000;=&#x2000;(1 + Tolerance<b>/</b>100) &#x2022; Lower
+    </div>
+    <div>
+      <i>UpperDim</i>&#x2000;=&#x2000;(1 &#x2212; Tolerance<b>/</b>100) &#x2022; (Upper1 + Upper2)<br/>
     </div>
   </div>
+</div>
 
-  <div class="titleDiv"><span class="titleSpan">Results</span><span id="downloadSpan"></span></div>
-  <table id="resultsTable">
-    <tr>
-      <td>&nbsp;</td>
-    </tr>
-  </table>
+<div class="titleDiv"><span class="titleSpan">Results</span><span id="downloadSpan"></span></div>
+<table id="resultsTable" style="font-size: 12pt;">
+  <tr style="height: 5em;"><td style="width: 35em;">&#x2000;</td></tr>
+</table>
 
-  <p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#" style="max-width: 34em;">
-    <a rel="license" href="http://creativecommons.org/publicdomain/zero/1.0/" style="text-decoration: none">
+<div xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#" style="display: inline-block; margin-top: 40pt; margin-left: 4pt;">
+  <div style="float: left; margin-right: 1em;">
+    <a rel="license" href="http://creativecommons.org/publicdomain/zero/1.0/" style="text-decoration: none;">
       <!-- Begin CC0 Button SVG Image -->
       <svg width="88px" height="31px" enable-background="new -0.5 -0.101 88 31" version="1.1" viewBox="-0.5 -0.101 88 31" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="CC0 Button">
       <title>CC0</title>
@@ -362,15 +359,16 @@ td.paramLabel {
       </svg>
       <!-- End CC0 Button SVG Image -->
     </a>
-    <br/>
+  </div>
+  <div style="max-width: 30em; display: inline-block; font-size: 11pt;">
     To the extent possible under law,
     <span resource="[_:publisher]" rel="dct:publisher">
     <span property="dct:title">Ben Tesch</span></span>
     has waived all copyright and related or neighboring rights to
-    <span property="dct:title">High Voltage Divider Calculator</span>.
+    <span property="dct:title">Voltage Divider Calculator</span>.
     This work is published from:
     <span property="vcard:Country" datatype="dct:ISO3166" content="US" about="[_:publisher]">United States</span>.
-  </p>
+  </div>
 </div>
 
 <script type="text/javascript">
@@ -544,8 +542,7 @@ function ShowE24() {
   // Remove target ratio value display if present
   var ratioDiv = document.getElementById("ratioDiv");
   if (ratioDiv !== null) {
-    var alignDiv = document.getElementById("alignDiv");
-    alignDiv.removeChild(ratioDiv);
+    document.body.removeChild(ratioDiv);
   }
 
   var tableFragment = document.createDocumentFragment();
@@ -601,8 +598,7 @@ function ShowE96() {
   // Remove target ratio value display if present
   var ratioDiv = document.getElementById("ratioDiv");
   if (ratioDiv !== null) {
-    var alignDiv = document.getElementById("alignDiv");
-    alignDiv.removeChild(ratioDiv);
+    document.body.removeChild(ratioDiv);
   }
 
   var tableFragment = document.createDocumentFragment();
@@ -1472,14 +1468,13 @@ function displayResults() {
 
   // Show target divider ratio value if input is an expression
   if (settings.isExpr) {
-    var alignDiv = document.getElementById("alignDiv");
     var ratio_div = document.createElement("div");
     ratio_div.id = "ratioDiv";
     ratio_div.style.fontSize = "13pt";
     ratio_div.style.marginLeft = "4pt";
     ratio_div.style.marginBottom = "10pt";
     ratio_div.textContent = "Target Divider Ratio = " + settings.targetRatio;
-    alignDiv.insertBefore(ratio_div, resultsTable);
+    document.body.insertBefore(ratio_div, resultsTable);
   }
 
   // Display spreadsheet download links
@@ -2229,8 +2224,7 @@ function solveDivider() {
   // Remove target ratio value display if present
   var ratioDiv = document.getElementById("ratioDiv");
   if (ratioDiv !== null) {
-    var alignDiv = document.getElementById("alignDiv");
-    alignDiv.removeChild(ratioDiv);
+    document.body.removeChild(ratioDiv);
   }
 
   // These are used for error messages
